--- a/Board_Project/src/main/webapp/resources/front/main/css/styles.css
+++ b/Board_Project/src/main/webapp/resources/front/main/css/styles.css
@@ -4498,6 +4498,7 @@ textarea.form-control-lg {
   color: var(--bs-breadcrumb-item-active-color);
 }
 
+
 .pagination {
   --bs-pagination-padding-x: 0.75rem;
   --bs-pagination-padding-y: 0.375rem;
@@ -4529,11 +4530,16 @@ textarea.form-control-lg {
   display: block;
   padding: var(--bs-pagination-padding-y) var(--bs-pagination-padding-x);
   font-size: var(--bs-pagination-font-size);
-  color: var(--bs-pagination-color);
+/*   color: var(--bs-pagination-color); */
   text-decoration: none;
-  background-color: var(--bs-pagination-bg);
-  border: var(--bs-pagination-border-width) solid var(--bs-pagination-border-color);
+/*   background-color: var(--bs-pagination-bg); */
+/*   border: var(--bs-pagination-border-width) solid var(--bs-pagination-border-color); */
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+
+
+  color: #4e73df;
+  background-color: #fff;
+  border: 1px solid #dddfeb;
 }
 @media (prefers-reduced-motion: reduce) {
   .page-link {
@@ -4542,9 +4548,13 @@ textarea.form-control-lg {
 }
 .page-link:hover {
   z-index: 2;
-  color: var(--bs-pagination-hover-color);
-  background-color: var(--bs-pagination-hover-bg);
-  border-color: var(--bs-pagination-hover-border-color);
+/*   color: var(--bs-pagination-hover-color); */
+/*   background-color: var(--bs-pagination-hover-bg); */
+/*   border-color: var(--bs-pagination-hover-border-color); */
+  
+  color: #224abe;
+  background-color: #eaecf4;
+  border-color: #dddfeb;
 }
 .page-link:focus {
   z-index: 3;
@@ -4555,9 +4565,13 @@ textarea.form-control-lg {
 }
 .page-link.active, .active > .page-link {
   z-index: 3;
-  color: var(--bs-pagination-active-color);
-  background-color: var(--bs-pagination-active-bg);
-  border-color: var(--bs-pagination-active-border-color);
+/*   color: var(--bs-pagination-active-color); */
+/*   background-color: var(--bs-pagination-active-bg); */
+/*   border-color: var(--bs-pagination-active-border-color); */
+  
+  color: #fff;
+  background-color: #4e73df;
+  border-color: #4e73df;
 }
 .page-link.disabled, .disabled > .page-link {
   color: var(--bs-pagination-disabled-color);
@@ -11036,8 +11050,10 @@ header.masthead .masthead-heading {
   max-width: 100vw;
 }
 .portfolio-modal .modal-content {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
+/*   padding-top: 6rem; */
+/*   padding-bottom: 6rem; */
+  padding-top: 2rem;
+  padding-bottom: 2rem;
   text-align: center;
 }
 .portfolio-modal .modal-content h2, .portfolio-modal .modal-content .h2 {
@@ -11056,7 +11072,8 @@ header.masthead .masthead-heading {
   margin-bottom: 2rem;
 }
 .portfolio-modal .modal-content img {
-  margin-bottom: 2rem;
+/*   margin-bottom: 2rem; */
+  margin-bottom: 0rem;
 }
 .portfolio-modal .close-modal {
   position: absolute;
