--- a/Board_Project/src/main/webapp/resources/front/main/css/styles.css
+++ b/Board_Project/src/main/webapp/resources/front/main/css/styles.css
@@ -2027,11 +2027,25 @@ progress {
   border-color: #03c75a;
   outline: 0;
 /*   box-shadow: 0 0 0 0.25rem rgba(255, 200, 0, 0.25); */
+}
+.form-control:focus {
+  color: #212529;
+/*   background-color: #fff; */
+/*   border-color: #ffe480; */
+  border-color: #03c75a;
+  outline: 0;
+/*   box-shadow: 0 0 0 0.25rem rgba(255, 200, 0, 0.25); */
+}
 
+.my-input:focus {
+  color: #212529;
+/*   background-color: #fff; */
+/*   border-color: #ffe480; */
+  border-color: #ced4da;
+  outline: 0;
+/*   box-shadow: 0 0 0 0.25rem rgba(255, 200, 0, 0.25); */
 }
-.form-control::-webkit-date-and-time-value {
-  height: 1.5em;
-}
+
 .form-control::-moz-placeholder {
   color: #6c757d;
   opacity: 1;
@@ -11375,12 +11389,16 @@ section#contact form#contactForm :-ms-input-placeholder {
   position: fixed;
   top: 0;
   left: 0;
-  margin: 0;
-  height: 100%;
-  max-width: 45%;
-  width: 45%;
+  margin: 1;
+  height: 98%;
+  max-width: 30%;
+  width: 30%;
 }
 
 .modal-half-left .modal-content {
+/*   height: 100%; */
   height: 100%;
+  overflow-y: auto;
+  border-radius: .375rem;
+  padding: 1rem;
 }
