--- a/Board_Project/src/main/webapp/resources/front/main/css/styles.css
+++ b/Board_Project/src/main/webapp/resources/front/main/css/styles.css
@@ -1778,7 +1778,8 @@ progress {
 }
 
 .table-sm > :not(caption) > * > * {
-  padding: 0.25rem 0.25rem;
+/*   padding: 0.25rem 0.25rem; */
+  padding: 0.35rem;
 }
 
 .table-bordered > :not(caption) > * {
