--- a/Board_Project/src/main/webapp/resources/front/main/css/styles.css
+++ b/Board_Project/src/main/webapp/resources/front/main/css/styles.css
@@ -11417,7 +11417,7 @@ section#contact form#contactForm :-ms-input-placeholder {
 
 .modal-half-center .modal-content {
 /*   height: 100%; */
-  height: 100%;
+/*   height: 100%; */
   overflow-y: auto;
   border-radius: .375rem;
   padding: 1rem;
